manifests/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qoves-api
  labels:
    app: qoves-api
spec:
  selector:
    app: qoves-api
  ports:
    - name: http
      port: 8080
      targetPort: http
