manifests/api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qoves-api
spec:
  ingressClassName: nginx
  rules:
    - host: qoves.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: qoves-api
                port:
                  name: http
